# tap-turnio

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql.yml
tap_turnio/: auth.py  client.py  streams.py  tap.py
tests/: conftest.py  test_auth.py  test_client.py  test_streams.py  test_tap.py
